# lou_streamlit

./: 01_Accueil.py  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
data/: __init__.py  data_loader.py  load_dataset.py
page/: a_propos.py  accueil.py  annees.py  categories.py  clubs.py  contact.py  joueurs.py
pages/: 02_Catégorie.py  03_Année.py  04_Club.py  05_Joueur.py  06_A_propos.py  07_Contact.py
test/: accueil.py  donnees.csv  donnees.py  main copy.py
utils/: calculations.py  calculations_old.py  data_loader.py  load_dataset.py
