[project]
name = "lou-streamlit"
version = "0.1.0"
description = "Application Streamlit du LOU Rugby pour le suivi et l'analyse des joueuses et joueurs des équipes nationales"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uv==0.6.5",
    "streamlit==1.43.2",
    "pandas==2.2.3",
    "duckdb>=1.2.1",
    "motherduck>=0.0.0",
    "pygwalker>=0.4.9.14",
    "utils>=1.0.2",
    "plotly>=6.0.1",
    "streamlit-antd-components>=0.3.2",
    "streamlit-option-menu>=0.4.0",
    "folium>=0.19.5",
    "streamlit-folium>=0.24.0",
]
